--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
+/* CSS RESET */
 * {
-    font-family: Roboto;
+    font-family: Roboto, sans-serif;
     padding: 0;
     margin: 0;
+    box-sizing: border-box;
 }
 
 ul {
@@ -15,7 +17,7 @@ header {
     height: 70px;
     background-color: #1F2937;
     display: flex;
-    flex-flow: row nowrap;
+    flex-flow: row wrap;
     justify-content: space-between;
     align-items: center;
     padding: 0 150px 0;
@@ -41,12 +43,11 @@ a {
 /* Main section */
 
 .main-section {
-    height: 300px;
+    height: 400px;
     background-color: #1f2937;
-    padding:  100px 150px 100px;
+    padding:  60px 150px 60px;
     display: flex;
-    justify-content: center;
-    gap: 150px;
+    justify-content: space-between;
 }
 
 .main-title {
@@ -60,22 +61,22 @@ a {
 }
 
 .main-section article {
-    width: 50%;
-    padding: 20px 0;
+    max-width: 50%;
+    flex: 1 1 auto;
     display: flex;
     flex-flow: column nowrap;
     justify-content: space-between;
     align-items: flex-start;
 }
 
-.main-section div {
-    width: 50%;
-    height: 50;
+.main-section .image-placeholder {
+    flex: 1 1 auto;
     background-color: gray;
     color: #F9FAF8;
     display: flex;
     justify-content: center;
     align-items: center;
+    text-align: center;
 }
 
 .main-section button {
@@ -85,4 +86,39 @@ a {
     font-size: 18px;
     padding: 10px 15px;
     border-radius: 12px;
+}
+
+/* Random Info */
+.random-info {
+    height: 400px;
+    padding: 30px 150px 30px;
+    display: flex;
+    flex-flow: column nowrap;
+    text-align: center;
+}
+
+.random-info h1 {
+    padding-bottom: 30px;
+}
+
+.card-placeholder {
+    width: 150px;
+    height: 150px;
+    border: 5px solid #3882F6;
+    border-radius: 10%;
+    margin-bottom: 10px;
+}
+
+.card-container {
+    text-align: center;
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-evenly;
+}
+
+.card-container article {
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: center
 }
