--- a/style.css
+++ b/style.css
@@ -113,7 +113,7 @@ a {
     text-align: center;
     display: flex;
     flex-flow: row nowrap;
-    justify-content: space-evenly;
+    justify-content: space-between;
 }
 
 .card-container article {
@@ -121,4 +121,27 @@ a {
     flex-flow: column nowrap;
     justify-content: center;
     align-items: center
+}
+
+/* Quote Section */
+
+.quote-section {
+    height: 300px;
+    padding: 30px 150px 30px;
+    background-color: #E5E7EB;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: center;
+}
+
+.quote {
+    color: #1F2937;
+    font-size: 36px;
+    font-style: italic;
+    font-weight: lighter;
+}
+
+.author {
+    align-self: flex-end;
 }
